--- a/src/INFO233/Oblig3/GUI/MainSceneFXML.fxml
+++ b/src/INFO233/Oblig3/GUI/MainSceneFXML.fxml
@@ -1,21 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.effect.Bloom?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9.0.4" xmlns:fx="http://javafx.com/fxml/1" fx:controller="INFO233.Oblig3.GUI.MainSceneController">
+<AnchorPane fx:id="parent" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9.0.4" xmlns:fx="http://javafx.com/fxml/1" fx:controller="INFO233.Oblig3.GUI.MainSceneController">
    <children>
+      <Button fx:id="showInvoice" layoutX="412.0" layoutY="107.0" mnemonicParsing="false" onAction="#onShowInvoice" text="Show Invoice" />
+      <Button fx:id="editInvoice" layoutX="250.0" layoutY="107.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="99.0" text="Invoice" />
       <MenuBar prefHeight="29.0" prefWidth="600.0">
         <menus>
           <Menu mnemonicParsing="false" text="File">
@@ -35,49 +31,26 @@
           </Menu>
         </menus>
       </MenuBar>
-      <HBox layoutY="240.0" prefHeight="160.0" prefWidth="600.0">
-         <children>
-            <TableView prefHeight="160.0" prefWidth="600.0">
-              <columns>
-                <TableColumn prefWidth="75.0" text="C1" />
-                <TableColumn prefWidth="75.0" text="C2" />
-              </columns>
-            </TableView>
-         </children>
-      </HBox>
-      <TextArea fx:id="consoleId" layoutX="362.0" layoutY="29.0" prefHeight="211.0" prefWidth="238.0" />
-      <HBox layoutX="7.0" layoutY="29.0" prefHeight="211.0" prefWidth="337.0">
-         <children>
-            <VBox prefHeight="211.0" prefWidth="78.0">
-               <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Make a new: " wrappingWidth="92.13916015625" />
-                  <Button fx:id="newCustomer" mnemonicParsing="false" prefHeight="27.0" prefWidth="96.0" text="Customer" />
-                  <Button fx:id="newCategory" mnemonicParsing="false" prefHeight="27.0" prefWidth="94.0" text="Category" />
-                  <Button fx:id="newAddress" mnemonicParsing="false" prefHeight="27.0" prefWidth="108.0" text="Address" />
-                  <Button fx:id="newInvoice" mnemonicParsing="false" prefHeight="27.0" prefWidth="93.0" text="Invoice" />
-                  <Button fx:id="newInvoiceItem" mnemonicParsing="false" prefHeight="27.0" prefWidth="93.0" text="Invoiceitem" />
-               </children>
-               <effect>
-                  <Bloom threshold="1.0" />
-               </effect>
-            </VBox>
-            <VBox prefHeight="211.0" prefWidth="100.0">
-               <children>
-                  <Text lineSpacing="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Edit:" wrappingWidth="30.5107421875" />
-                  <Button fx:id="editCustomer" mnemonicParsing="false" prefHeight="27.0" prefWidth="101.0" text="Customer" />
-                  <Button fx:id="editCategory" mnemonicParsing="false" prefHeight="27.0" prefWidth="99.0" text="Category" />
-                  <Button fx:id="editAddress" mnemonicParsing="false" prefHeight="27.0" prefWidth="100.0" text="Address" />
-                  <Button fx:id="editInvoice" mnemonicParsing="false" prefHeight="27.0" prefWidth="99.0" text="Invoice" />
-                  <Button fx:id="editInvoiceItems" mnemonicParsing="false" prefHeight="27.0" prefWidth="100.0" text="Invoiceitem" />
-               </children>
-            </VBox>
-            <VBox prefHeight="211.0" prefWidth="143.0">
-               <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Invoice:" />
-                  <Button fx:id="showInvoice" mnemonicParsing="false" text="Show Invoice" />
-               </children>
-            </VBox>
-         </children>
-      </HBox>
+      <Button fx:id="newCustomer" layoutX="72.0" layoutY="187.0" mnemonicParsing="false" onAction="#onNewCustomer" prefHeight="27.0" prefWidth="96.0" text="Customer" />
+      <Button fx:id="newCategory" layoutX="75.0" layoutY="228.0" mnemonicParsing="false" onAction="#onNewCategory" prefHeight="27.0" prefWidth="94.0" text="Category" />
+      <Button fx:id="newAddress" layoutX="75.0" layoutY="271.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="93.0" text="Address" />
+      <Button fx:id="newInvoice" layoutX="74.0" layoutY="107.0" mnemonicParsing="false" onAction="#onNewInvoice" prefHeight="27.0" prefWidth="93.0" text="Invoice" />
+      <Button fx:id="newInvoiceItem" layoutX="74.0" layoutY="146.0" mnemonicParsing="false" onAction="#onNewInvoiceItem" prefHeight="27.0" prefWidth="93.0" text="Invoiceitem" />
+      <Button fx:id="editCustomer" layoutX="249.0" layoutY="187.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="101.0" text="Customer" />
+      <Button fx:id="editCategory" layoutX="250.0" layoutY="228.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="99.0" text="Category" />
+      <Button fx:id="editAddress" layoutX="250.0" layoutY="271.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="100.0" text="Address" />
+      <Button fx:id="editInvoiceItems" layoutX="250.0" layoutY="146.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="100.0" text="Invoiceitem" />
+      <Label layoutX="35.0" layoutY="69.0" text="Make a new:">
+         <font>
+            <Font size="19.0" />
+         </font></Label>
+      <Label layoutX="194.0" layoutY="69.0" text="Edit an existing: ">
+         <font>
+            <Font size="19.0" />
+         </font></Label>
+      <Label layoutX="372.0" layoutY="69.0" text="View invoices:">
+         <font>
+            <Font size="19.0" />
+         </font></Label>
    </children>
 </AnchorPane>
