--- a/src/INFO233/Oblig3/GUI/NewCategoryFXML.fxml
+++ b/src/INFO233/Oblig3/GUI/NewCategoryFXML.fxml
@@ -21,6 +21,6 @@
       </Label>
       <Button layoutX="152.0" layoutY="156.0" mnemonicParsing="false" onAction="#onInsertButton" text="Create" />
       <Button layoutX="460.0" layoutY="156.0" mnemonicParsing="false" onAction="#onBackButton" text=" Back" />
-      <TextArea fx:id="systemText" editable="false" layoutX="60.0" layoutY="276.0" prefHeight="81.0" prefWidth="176.0" />
+      <TextArea fx:id="systemText" editable="false" layoutX="60.0" layoutY="276.0" prefHeight="81.0" prefWidth="176.0" wrapText="true" />
    </children>
 </AnchorPane>
