--- a/src/INFO233/Oblig3/GUI/NewInvoiceFXML.fxml
+++ b/src/INFO233/Oblig3/GUI/NewInvoiceFXML.fxml
@@ -12,7 +12,7 @@
    <children>
       <TextField fx:id="newid" layoutX="118.0" layoutY="80.0" promptText="Insert ID" />
       <TextField fx:id="newCustomer" layoutX="118.0" layoutY="121.0" promptText="Insert Customer" />
-      <TextField fx:id="newDate" layoutX="118.0" layoutY="160.0" promptText="YYYY-MM-DD" />
+      <TextField fx:id="newDate" layoutX="118.0" layoutY="160.0" promptText="DD-MM-YYYY" />
       <Label layoutX="66.0" layoutY="29.0" text="Create a new invoice">
          <font>
             <Font size="16.0" />
@@ -22,7 +22,7 @@
       <Label layoutX="46.0" layoutY="126.0" text="Customer" />
       <Label layoutX="46.0" layoutY="165.0" text="Date" />
       <Button fx:id="createInvoice" layoutX="76.0" layoutY="200.0" mnemonicParsing="false" onAction="#createButtonPressed" text="Create" />
-      <TextArea fx:id="resultText" editable="false" layoutX="32.0" layoutY="280.0" prefHeight="92.0" prefWidth="177.0" />
+      <TextArea fx:id="resultText" editable="false" layoutX="32.0" layoutY="280.0" prefHeight="92.0" prefWidth="177.0" wrapText="true" />
       <Button layoutX="444.0" layoutY="200.0" mnemonicParsing="false" onAction="#returnToMain" text="Back" />
    </children>
 </AnchorPane>
