--- a/src/INFO233/Oblig3/GUI/MainSceneFXML.fxml
+++ b/src/INFO233/Oblig3/GUI/MainSceneFXML.fxml
@@ -38,7 +38,7 @@
       <Button fx:id="newInvoiceItem" layoutX="74.0" layoutY="146.0" mnemonicParsing="false" onAction="#onNewInvoiceItem" prefHeight="27.0" prefWidth="93.0" text="Invoiceitem" />
       <Button fx:id="editCustomer" layoutX="249.0" layoutY="187.0" mnemonicParsing="false" onAction="#onEditCustomer" prefHeight="27.0" prefWidth="101.0" text="Customer" />
       <Button fx:id="editCategory" layoutX="250.0" layoutY="228.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="99.0" text="Category" />
-      <Button fx:id="editAddress" layoutX="250.0" layoutY="271.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="100.0" text="Address" />
+      <Button fx:id="editAddress" layoutX="250.0" layoutY="271.0" mnemonicParsing="false" onAction="#onEditAddress" prefHeight="27.0" prefWidth="100.0" text="Address" />
       <Button fx:id="editInvoiceItems" layoutX="250.0" layoutY="146.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="100.0" text="Invoiceitem" />
       <Label layoutX="35.0" layoutY="69.0" text="Make a new:">
          <font>
