--- a/src/INFO233/Oblig3/GUI/MainSceneFXML.fxml
+++ b/src/INFO233/Oblig3/GUI/MainSceneFXML.fxml
@@ -11,7 +11,7 @@
 <AnchorPane fx:id="parent" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9.0.4" xmlns:fx="http://javafx.com/fxml/1" fx:controller="INFO233.Oblig3.GUI.MainSceneController">
    <children>
       <Button fx:id="showInvoice" layoutX="412.0" layoutY="107.0" mnemonicParsing="false" onAction="#onShowInvoice" text="Show Invoice" />
-      <Button fx:id="editInvoice" layoutX="250.0" layoutY="107.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="99.0" text="Invoice" />
+      <Button fx:id="editInvoice" layoutX="250.0" layoutY="107.0" mnemonicParsing="false" onAction="#onEditInvoice" prefHeight="27.0" prefWidth="99.0" text="Invoice" />
       <MenuBar prefHeight="29.0" prefWidth="600.0">
         <menus>
           <Menu mnemonicParsing="false" text="File">
