--- a/src/INFO233/Oblig3/GUI/EditCategoryFXML.fxml
+++ b/src/INFO233/Oblig3/GUI/EditCategoryFXML.fxml
@@ -7,21 +7,22 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="parent" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9.0.4" fx:controller="INFO233.Oblig3.GUI.EditCategoryController">
-   <children>
-      <Label layoutX="118.0" layoutY="47.0" text="Edit category">
-         <font>
-            <Font size="19.0" />
-         </font>
-      </Label>
-      <TextField fx:id="categoryid" editable="false" layoutX="169.0" layoutY="103.0" opacity="0.6" />
-      <TextField fx:id="name" layoutX="169.0" layoutY="149.0" />
-      <Label layoutX="118.0" layoutY="108.0" text="ID" />
-      <Label layoutX="61.0" layoutY="154.0" text="Category name" />
-      <TextArea fx:id="systemText" layoutX="-1.0" layoutY="254.0" prefHeight="146.0" prefWidth="607.0" />
-      <Button layoutX="169.0" layoutY="200.0" mnemonicParsing="false" onAction="#editCategory" text="Submit" />
-      <Button layoutX="303.0" layoutY="200.0" mnemonicParsing="false" onAction="#onDisplay" text="Display current data" />
-      <Button layoutX="495.0" layoutY="200.0" mnemonicParsing="false" onAction="#onBack" text="Back" />
-   </children>
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="parent" prefHeight="400.0" prefWidth="600.0"
+            xmlns="http://javafx.com/javafx/9.0.4" fx:controller="INFO233.Oblig3.GUI.EditCategoryController">
+    <children>
+        <Label layoutX="118.0" layoutY="47.0" text="Edit category">
+            <font>
+                <Font size="19.0"/>
+            </font>
+        </Label>
+        <TextField fx:id="categoryid" editable="false" layoutX="169.0" layoutY="103.0" opacity="0.6"/>
+        <TextField fx:id="name" layoutX="169.0" layoutY="149.0" promptText="Insert category name"/>
+        <Label layoutX="118.0" layoutY="108.0" text="ID"/>
+        <Label layoutX="61.0" layoutY="154.0" text="Category name"/>
+        <TextArea fx:id="systemText" layoutX="-1.0" layoutY="254.0" prefHeight="146.0" prefWidth="607.0"/>
+        <Button layoutX="169.0" layoutY="200.0" mnemonicParsing="false" onAction="#editCategory" text="Submit"/>
+        <Button layoutX="303.0" layoutY="200.0" mnemonicParsing="false" onAction="#onDisplay"
+                text="Display current data"/>
+        <Button layoutX="495.0" layoutY="200.0" mnemonicParsing="false" onAction="#onBack" text="Back"/>
+    </children>
 </AnchorPane>
