--- a/src/INFO233/Oblig3/GUI/EditInvoicePrestageFXML.fxml
+++ b/src/INFO233/Oblig3/GUI/EditInvoicePrestageFXML.fxml
@@ -5,17 +5,21 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="parent" prefHeight="264.0" prefWidth="491.0" xmlns="http://javafx.com/javafx/9.0.4" fx:controller="INFO233.Oblig3.GUI.EditInvoicePrestageController">
-   <children>
-      <Label layoutX="94.0" layoutY="56.0" text="Which Invoice do you want to edit?">
-         <font>
-            <Font size="19.0" />
-         </font>
-      </Label>
-      <TextField fx:id="invoiceid" layoutX="167.0" layoutY="116.0" promptText="Insert ID" />
-      <Label layoutX="85.0" layoutY="121.0" text="InvoiceID" />
-      <Button layoutX="113.0" layoutY="162.0" mnemonicParsing="false" onAction="#onBack" text="Back" />
-      <Button layoutX="305.0" layoutY="162.0" mnemonicParsing="false" onAction="#onNext" text="Next" />
-   </children>
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="parent" prefHeight="264.0" prefWidth="491.0"
+            xmlns="http://javafx.com/javafx/9.0.4" fx:controller="INFO233.Oblig3.GUI.EditInvoicePrestageController">
+    <children>
+        <Label layoutX="94.0" layoutY="56.0" text="Which Invoice do you want to edit?">
+            <font>
+                <Font size="19.0"/>
+            </font>
+        </Label>
+        <TextField fx:id="invoiceid" layoutX="167.0" layoutY="116.0" promptText="Insert ID"/>
+        <Label layoutX="85.0" layoutY="121.0" text="InvoiceID"/>
+        <Button layoutX="118.0" layoutY="189.0" mnemonicParsing="false" onAction="#onBack" text="Back"/>
+        <Button layoutX="311.0" layoutY="189.0" mnemonicParsing="false" onAction="#onNext" text="Next"/>
+        <Text fx:id="alertid" fill="#ee0a0a" layoutX="167.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0"
+              wrappingWidth="167.00000412762165"/>
+    </children>
 </AnchorPane>
