--- a/src/INFO233/Oblig3/GUI/EditProductFXML.fxml
+++ b/src/INFO233/Oblig3/GUI/EditProductFXML.fxml
@@ -7,27 +7,28 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="parent" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9.0.4" fx:controller="INFO233.Oblig3.GUI.EditProductController">
-   <children>
-      <Label layoutX="120.0" layoutY="33.0" text="Edit Product">
-         <font>
-            <Font size="19.0" />
-         </font>
-      </Label>
-      <TextField fx:id="productid" editable="false" layoutX="161.0" layoutY="69.0" opacity="0.68" />
-      <TextField fx:id="name" layoutX="161.0" layoutY="109.0" />
-      <TextField fx:id="description" layoutX="161.0" layoutY="148.0" />
-      <TextField fx:id="price" layoutX="161.0" layoutY="187.0" />
-      <TextField fx:id="category" layoutX="161.0" layoutY="226.0" />
-      <TextArea fx:id="systemText" layoutY="299.0" prefHeight="101.0" prefWidth="600.0" />
-      <Label layoutX="62.0" layoutY="74.0" text="ProductID" />
-      <Label layoutX="57.0" layoutY="114.0" text="Product name" />
-      <Label layoutX="58.0" layoutY="153.0" text="Description" />
-      <Label layoutX="62.0" layoutY="192.0" text="Price" />
-      <Label layoutX="64.0" layoutY="231.0" text="Category" />
-      <Button layoutX="146.0" layoutY="261.0" mnemonicParsing="false" onAction="#editProduct" text="Submit" />
-      <Button layoutX="286.0" layoutY="261.0" mnemonicParsing="false" onAction="#onDisplay" text="Display current data" />
-      <Button layoutX="464.0" layoutY="261.0" mnemonicParsing="false" onAction="#onBack" text="Back" />
-   </children>
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="parent" prefHeight="400.0" prefWidth="600.0"
+            xmlns="http://javafx.com/javafx/9.0.4" fx:controller="INFO233.Oblig3.GUI.EditProductController">
+    <children>
+        <Label layoutX="120.0" layoutY="33.0" text="Edit Product">
+            <font>
+                <Font size="19.0"/>
+            </font>
+        </Label>
+        <TextField fx:id="productid" editable="false" layoutX="161.0" layoutY="69.0" opacity="0.68"/>
+        <TextField fx:id="name" layoutX="161.0" layoutY="109.0" promptText="Insert new name"/>
+        <TextField fx:id="description" layoutX="161.0" layoutY="148.0" promptText="Insert new description"/>
+        <TextField fx:id="price" layoutX="161.0" layoutY="187.0" promptText="Insert new price"/>
+        <TextField fx:id="category" layoutX="161.0" layoutY="226.0" promptText="Insert new category"/>
+        <TextArea fx:id="systemText" layoutY="299.0" prefHeight="101.0" prefWidth="600.0"/>
+        <Label layoutX="62.0" layoutY="74.0" text="ProductID"/>
+        <Label layoutX="57.0" layoutY="114.0" text="Product name"/>
+        <Label layoutX="58.0" layoutY="153.0" text="Description"/>
+        <Label layoutX="62.0" layoutY="192.0" text="Price"/>
+        <Label layoutX="64.0" layoutY="231.0" text="Category"/>
+        <Button layoutX="146.0" layoutY="261.0" mnemonicParsing="false" onAction="#editProduct" text="Submit"/>
+        <Button layoutX="286.0" layoutY="261.0" mnemonicParsing="false" onAction="#onDisplay"
+                text="Display current data"/>
+        <Button layoutX="464.0" layoutY="261.0" mnemonicParsing="false" onAction="#onBack" text="Back"/>
+    </children>
 </AnchorPane>
