--- a/src/INFO233/Oblig3/GUI/EditProductPrestageFXML.fxml
+++ b/src/INFO233/Oblig3/GUI/EditProductPrestageFXML.fxml
@@ -5,18 +5,22 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="parent" minHeight="-Infinity" minWidth="-Infinity" prefHeight="242.0" prefWidth="445.0" xmlns="http://javafx.com/javafx/9.0.4" fx:controller="INFO233.Oblig3.GUI.EditProductPrestageController">
-   <children>
-      <Label layoutX="52.0" layoutY="27.0" text="Which product do you want to edit?">
-         <font>
-            <Font size="19.0" />
-         </font>
-      </Label>
-      <TextField fx:id="productid" layoutX="185.0" layoutY="94.0" promptText="Insert ID" />
-      <Button layoutX="96.0" layoutY="144.0" mnemonicParsing="false" onAction="#onBack" text="Back" />
-      <Button layoutX="313.0" layoutY="144.0" mnemonicParsing="false" onAction="#onNext" text="Next" />
-      <Label layoutX="96.0" layoutY="99.0" text="ProductID" />
-   </children>
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="parent" minHeight="-Infinity" minWidth="-Infinity" prefHeight="242.0"
+            prefWidth="445.0" xmlns="http://javafx.com/javafx/9.0.4"
+            fx:controller="INFO233.Oblig3.GUI.EditProductPrestageController">
+    <children>
+        <Label layoutX="52.0" layoutY="27.0" text="Which product do you want to edit?">
+            <font>
+                <Font size="19.0"/>
+            </font>
+        </Label>
+        <TextField fx:id="productid" layoutX="170.0" layoutY="94.0" promptText="Insert ID"/>
+        <Button layoutX="96.0" layoutY="158.0" mnemonicParsing="false" onAction="#onBack" text="Back"/>
+        <Button layoutX="313.0" layoutY="158.0" mnemonicParsing="false" onAction="#onNext" text="Next"/>
+        <Label layoutX="96.0" layoutY="99.0" text="ProductID"/>
+        <Text fx:id="alertid" fill="#e40c0c" layoutX="170.0" layoutY="134.0" strokeType="OUTSIDE" strokeWidth="0.0"
+              wrappingWidth="166.9999946653843"/>
+    </children>
 </AnchorPane>
