--- a/src/INFO233/Oblig3/GUI/InvoiceFXML.fxml
+++ b/src/INFO233/Oblig3/GUI/InvoiceFXML.fxml
@@ -9,21 +9,17 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="parent" xmlns="http://javafx.com/javafx/9.0.4"
-            fx:controller="INFO233.Oblig3.GUI.InvoiceController">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="parent" xmlns="http://javafx.com/javafx/9.0.4" fx:controller="INFO233.Oblig3.GUI.InvoiceController">
     <children>
         <Label layoutX="309.0" layoutY="43.0" prefHeight="73.0" prefWidth="89.0" text="Faktura">
             <font>
-                <Font size="24.0"/>
+                <Font size="24.0" />
             </font>
         </Label>
-        <HBox alignment="CENTER" focusTraversable="true" layoutX="-3.0" nodeOrientation="LEFT_TO_RIGHT"
-              prefHeight="26.0" prefWidth="712.0">
+        <HBox alignment="CENTER" focusTraversable="true" layoutX="-3.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="26.0" prefWidth="712.0">
             <children>
-                <Button fx:id="back" mnemonicParsing="false" onAction="#onBack" prefHeight="27.0" prefWidth="64.0"
-                        text="Tilbake"/>
-                <Button fx:id="next" mnemonicParsing="false" onAction="#onNext" prefHeight="27.0" prefWidth="60.0"
-                        text="Neste"/>
+                <Button fx:id="back" mnemonicParsing="false" onAction="#onBack" prefHeight="27.0" prefWidth="64.0" text="Tilbake" />
+                <Button fx:id="next" mnemonicParsing="false" onAction="#onNext" prefHeight="27.0" prefWidth="60.0" text="Neste" />
             </children>
         </HBox>
 
@@ -34,38 +30,37 @@
                         <children>
                             <Label id="fakturaNr" fx:id="invoiceNoId" style="-fx-underline: true" text="Fakturanr: ">
                                 <font>
-                                    <Font name="System Bold" size="13.0"/>
+                                    <Font name="System Bold" size="13.0" />
                                 </font>
                             </Label>
-                            <Text fx:id="fakuturaid"/>
+                            <Text fx:id="fakuturaid" />
                         </children>
                     </VBox>
 
                     <children>
-                        <Label id="navn" style="-fx-underline: true" text="Navn: "/>
-                        <Text fx:id="navnId"/>
+                        <Label id="navn" style="-fx-underline: true" text="Navn: " />
+                        <Text fx:id="navnId" />
                     </children>
                 </VBox>
 
                 <VBox>
                     <children>
-                        <Label style="-fx-underline: true" text="Telefonnr: "/>
-                        <Text fx:id="telefonid"/>
+                        <Label style="-fx-underline: true" text="Telefonnr: " />
+                        <Text fx:id="telefonid" />
                     </children>
                 </VBox>
 
                 <VBox>
                     <children>
-                        <Label id="addresse" fx:id="fxAddressId" style="-fx-underline: true" text="Addresse: "/>
-                        <Text fx:id="addresseId"/>
+                        <Label id="addresse" fx:id="fxAddressId" style="-fx-underline: true" text="Addresse: " />
+                        <Text fx:id="addresseId" />
                     </children>
                 </VBox>
 
                 <VBox>
                     <children>
-                        <Label id="postnummer" fx:id="postalcodeId" style="-fx-underline: true"
-                               text="Poststed/nummer: "/>
-                        <Text fx:id="postId"/>
+                        <Label id="postnummer" fx:id="postalcodeId" style="-fx-underline: true" text="Poststed/nummer: " />
+                        <Text fx:id="postId" />
                     </children>
                 </VBox>
 
@@ -79,8 +74,8 @@
             <children>
                 <VBox prefHeight="38.0" prefWidth="87.0">
                     <children>
-                        <Label style="-fx-underline: true" text="Gjelder fra: "/>
-                        <Text fx:id="datoid"/>
+                        <Label style="-fx-underline: true" text="Gjelder fra: " />
+                        <Text fx:id="datoid" />
                     </children>
                 </VBox>
 
@@ -88,8 +83,8 @@
                 <VBox alignment="TOP_LEFT" prefHeight="54.0" prefWidth="135.0" spacing="5">
                     <children>
 
-                        <Label prefHeight="22.0" prefWidth="73.0" style="-fx-underline: true" text="Konto: "/>
-                        <Text fx:id="billingid"/>
+                        <Label prefHeight="22.0" prefWidth="73.0" style="-fx-underline: true" text="Konto: " />
+                        <Text fx:id="billingid" />
                     </children>
                 </VBox>
             </children>
@@ -101,7 +96,7 @@
 
                     </children>
                     <children>
-                        <Label prefHeight="12.0" prefWidth="67.0" style="-fx-underline: true" text="Ditt kjøp: "/>
+                        <Label prefHeight="12.0" prefWidth="67.0" style="-fx-underline: true" text="Ditt kjøp: " />
                     </children>
                 </VBox>
 
@@ -109,27 +104,27 @@
                     <children>
                     </children>
                     <children>
-                        <Label style="-fx-underline: true" text="Produktbeskrivelse: "/>
+                        <Label style="-fx-underline: true" text="Produktbeskrivelse: " />
                     </children>
                 </VBox>
                 <VBox fx:id="pris" prefHeight="71.0" prefWidth="111.0">
                     <children>
-                        <Label prefHeight="7.0" prefWidth="35.0" style="-fx-underline: true" text="Pris: "/>
+                        <Label prefHeight="7.0" prefWidth="35.0" style="-fx-underline: true" text="Pris: " />
                     </children>
                 </VBox>
                 <VBox prefHeight="71.0" prefWidth="118.0">
                     <children>
-                        <Label style="-fx-underline: true" text="Totalt: "/>
-                        <Text fx:id="sumid" strokeType="OUTSIDE" strokeWidth="0.0"/>
+                        <Label style="-fx-underline: true" text="Totalt: " />
+                        <Text fx:id="sumid" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="49.0" />
                     </children>
                 </VBox>
             </children>
             <opaqueInsets>
-                <Insets top="54.0"/>
+                <Insets top="54.0" />
             </opaqueInsets>
         </HBox>
     </children>
     <padding>
-        <Insets bottom="30.0"/>
+        <Insets bottom="30.0" />
     </padding>
 </AnchorPane>
